--- a/index.html
+++ b/index.html
@@ -450,7 +450,71 @@
     </div>
   
   <!-- DIVIDER -->
-  <hr class="mt-0 mb-0">			
+  <hr class="mt-0 mb-0">	
+  
+  <!-- FEATURES 1 -->
+  <div id="about" class="page-section">
+    <div class="container fes1-cont">
+      <div class="row">
+        <div class="col-md-4 fes1-img-cont wow fadeInUp mb-20">
+          <img src="images/device3.png" alt="img" >
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="fes1-main-title-cont wow fadeInDown">
+                <div class="title-fs-60">
+                  LET YOUR LOCS THRIVE<br>
+                  <span class="bold">AURAS</span>
+                </div>
+                <div class="line-3-100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-sm-6">
+              <div class="fes1-box wow fadeIn" >
+                <div class="fes1-box-icon">
+                  <div class="icon icon-basic-mixer2"></div>
+                </div>
+                <h3>EVEN MOISTURE APPLICATION</h3>
+                <p>Ensures the even distribution of moisture, preventing dryness and breakage.</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-6">
+              <div class="fes1-box wow fadeIn" data-wow-delay="200ms">
+                <div class="fes1-box-icon">
+                  <div class="icon icon-basic-lightbulb"></div>
+                </div>
+                <h3>EXTENDED MAINTENANCE INTERVALS</h3>
+                <p>Prolongs time between professional loc maintenance sessions, saving time and money.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-sm-6">
+              <div class="fes1-box wow fadeIn" data-wow-delay="400ms">
+                <div class="fes1-box-icon">
+                  <div class="icon icon-basic-helm"></div>
+                </div>
+                <h3>CLEAN AND FRESH APPEARANCE</h3>
+                <p>Keeps locs looking freshly maintained for longer, enhancing appearance and confidence.</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-6">
+              <div class="fes1-box wow fadeIn" data-wow-delay="600ms">
+                <div class="fes1-box-icon">
+                  <div class="icon icon-basic-settings"></div>
+                </div>
+                <h3>COST EFFICIENCY</h3>
+                <p>Reduces the overall cost of loc maintenance, making it more accessible.</p>
+              </div>
+            </div>
+          </div>                    
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- FEATURES 2 -->
   <div class="page-section grey-light-bg clearfix">
@@ -474,6 +538,8 @@
     </div>
   </div>        
 
+  <!-- DIVIDER -->
+  <hr class="mt-0 mb-0">	
 
   <!-- FEATURES 3 -->
   <div class="page-section">
